--- a/.gitignore
+++ b/.gitignore
@@ -208,4 +208,9 @@ pyrightconfig.json
 
 # End of https://www.toptal.com/developers/gitignore/api/c++,python
 
+# Manually added 
+
+# developing
+.vscode/
 submit/
+tests/
