--- a/.gitignore
+++ b/.gitignore
@@ -208,11 +208,12 @@ pyrightconfig.json
 
 # End of https://www.toptal.com/developers/gitignore/api/c++,python
 
-# Manually added 
+### algo ###
 
-# developing
+# development
 .vscode/
 submit/
+build/
 
-# link to rithm
+# assistant
 rithm
