--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,10 +14,10 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Configure CMake
-      run: cmake --preset debug
+      run: cmake --preset g++-debug
 
     - name: Build
-      run: cmake --build --preset debug
+      run: cmake --build --preset g++-debug
 
     - name: Test
-      run: ctest --preset test-all
+      run: ctest --preset g++-test-all
