--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,7 +3,8 @@ FROM ubuntu:22.04
 COPY install_deps.sh /
 RUN sh install_deps.sh
 
-RUN apt-get install -y bash-completion
+RUN ln -s /usr/bin/clang-17 /usr/bin/clang
+RUN ln -s /usr/bin/clang++-17 /usr/bin/clang++
 
 ENV TZ=Europe/Moscow
 ENV LANG C.UTF-8
@@ -19,3 +20,5 @@ ARG USERNAME
 RUN useradd -m -s /bin/bash $USERNAME
 COPY .bashrc /home/$USERNAME/.bashrc
 RUN chown $USERNAME:$USERNAME /home/$USERNAME/.bashrc
+
+RUN usermod -aG sudo $USERNAME
