--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -13,5 +13,6 @@ services:
     tty: true
     volumes:
       - $ALGO_PATH:/algo
+      - $RITHM_PATH:/rithm
     ports:
       - "127.0.0.1:3333:22"
