--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,9 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
+    - name: check formatting
+      run: python run.py format . --check
+
     - name: Configure CMake
       run: cmake --preset g++-debug
 
