--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   ci:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
     
     env:
       ALGO_PATH: ${{ github.workspace }}
@@ -21,6 +21,9 @@ jobs:
 
     - name: check ALGO_PATH
       run: echo $ALGO_PATH
+
+    - name: check clang
+      run: clang --version
 
     - name: Check formatting
       run: python run.py format . --check
